# copilot-news-da

./: COME_AGGIORNARE.md  CURATION.md  README.md  data.json  index.html  prompts.json
functions/api/: flags.js
kb/: README.md  template-fonte.md
kb/fonti/: 2026-06-overhang-imprenditoria-ai.md
tools/: curate_prompts.py  fetch_and_parse_prompts.py  test_curate_prompts.py  test_flags_api.sh  test_validate_prompts.py  validate_prompts.py
trading_bot/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
trading_bot/docs/: ARCHITECTURE.md  ROADMAP.md  STRATEGIES.md
trading_bot/src/trading_bot/: __init__.py  cli.py  config.py
trading_bot/src/trading_bot/backtest/: __init__.py  engine.py  walk_forward.py
trading_bot/src/trading_bot/data/: __init__.py  providers.py  universe.py
trading_bot/src/trading_bot/execution/: __init__.py  broker.py
trading_bot/src/trading_bot/monitoring/: __init__.py  logging.py
trading_bot/src/trading_bot/portfolio/: __init__.py  store.py
trading_bot/src/trading_bot/risk/: __init__.py  circuit_breaker.py  sizing.py
trading_bot/src/trading_bot/strategies/: __init__.py  base.py  crypto_momentum.py  mean_reversion.py  momentum.py
trading_bot/tests/: conftest.py  test_backtest.py  test_risk.py  test_store.py  test_strategies.py  test_walk_forward.py
